# Bounding-Volumes-and-BV-Hierarchies

./: .gitignore  CS350.sln  CS350.vcxproj  CS350.vcxproj.filters  README.md  README.txt  imgui.ini
1.0 - Simple Scene/: BVHierarchy.cpp  BVHierarchy.h  BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  FSQ.frag  FSQ.vert  GLApplication.cpp  GameObject.cpp  GameObject.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SimpleScene_Quad.cpp  SimpleScene_Quad.h  Transform.cpp  Transform.h  update_dependencies.bat
Common/: Scene.cpp  Scene.h  shader.cpp  shader.hpp
Common/build_files/: Common_packages.cmake  Common_target.cmake
Common/shaders/: DiffuseShader.frag  DiffuseShader.vert  QuadFragmentShader.frag  QuadVertexShader.vert
